# luciart

./: CMakeLists.txt  README.md
data/nff/: box_test_effects.nff  geo_primitives.nff  test_dof.nff  test_dof_2.nff
data/results/: box_test_effects.nff.tga  test_dof_2.nff.tga
src/: color.cpp  color.h  intersection.cpp  intersection.h  lucia.cpp  lucia.h  material.cpp  material.h  ray.cpp  ray.h  scene.cpp  scene.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/camera/: camera.cpp  camera.h  lens.cpp  lens.h  pinhole.cpp  pinhole.h
src/geometry/: aabb.cpp  aabb.h  area.h  compound.cpp  compound.h  cone.cpp  cone.h  cylinder.cpp  cylinder.h  grid.cpp  grid.h  object.cpp  object.h  patch.cpp  patch.h  plane.cpp  plane.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/light/: light.cpp  light.h
src/parser/: factory.h  nff.cpp  nff.h  obj.cpp  obj.h  parser.h  ply.cpp  ply.h  tinyply.cpp
src/sampler/: adaptive.cpp  adaptive.h  jittered.cpp  jittered.h  random.cpp  random.h  regular.cpp  regular.h  sampler.cpp  sampler.h
src/tracer/: distributed.cpp  distributed.h  naive.cpp  naive.h  tracer.cpp  tracer.h
src/utility/: constants.h  image.cpp  image.h  utility.h
